--- a/presentation/src/main/res/layout/fragment_search.xml
+++ b/presentation/src/main/res/layout/fragment_search.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.gvfiqst.tontestapp.presentation.ui.search.view.SearchResultView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/searchResultView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/edtSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Search" />
-
-</LinearLayout>
+    android:layout_height="match_parent" />
