--- a/presentation/src/main/res/layout/fragment_search.xml
+++ b/presentation/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.gvfiqst.tontestapp.presentation.ui.search.view.SearchResultView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/searchResultView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    app:srv_itemMargin="@dimen/search_result_item_margin"
+    app:srv_spanCount="@integer/search_result_span_count" />
